chore: updated config.ini.example up to date

--- a/central/config.ini.example
+++ b/central/config.ini.example
@@ -7,3 +7,20 @@ password = 123456
 database = devices
 charset = utf8
 db_url = mysql+pymysql://%(user)s:%(password)s@%(host)s:%(port)s/%(database)s?charset=%(charset)s
+
+drop_tables = True
+create_tables = True
+
+[ldap]
+host = ldap-server
+port = 389
+user = cn=admin,dc=example,dc=com
+password = 123456
+base_dn = dc=example,dc=com
+search_filter = (objectClass=person)
+search_scope = 2
+search_timeout = 10
+search_size_limit = 0
+
+[credential]
+token_duration = 120 # seconds
