--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,12 @@
 version: '2'
 
 services:
-  openldap:
-    image: docker.io/bitnami/openldap:2.6
-    ports:
-      - '1389:1389'
-      - '1636:1636'
-    environment:
-      - LDAP_ADMIN_USERNAME=admin
-      - LDAP_ADMIN_PASSWORD=adminpassword
-      - LDAP_USERS=user01,user02
-      - LDAP_PASSWORDS=password1,password2
+  device_database:
+    image: linuxserver/mariadb
+    hostname: database
+    env_file:
+      - .env
     volumes:
-      - 'openldap_data:/bitnami/openldap'
-
-volumes:
-  openldap_data:
-    driver: local
+      - ./.data:/config
+    ports:
+      - 3306:3306
